# forklift_nav2_robotest

./: .gitignore  forklift_factory_big_map.pgm  forklift_factory_big_map.yaml  forklift_factory_big_map_clean.pgm  forklift_factory_big_map_clean.yaml  forklift_factory_map.pgm  forklift_factory_map.yaml  run_tb3_gazebo.bash  setup_tb3_ros_env.bash  tb3_navigation2_no_docking.rviz
docker/foxy/: Dockerfile  entrypoint.sh
forklift_msgs/: CMakeLists.txt  package.xml
forklift_msgs/msg/: ForkliftControlCommand.msg  ForkliftFaultState.msg  ForkliftIoState.msg  ForkliftVehicleState.msg
forklift_msgs/srv/: SetEmergencyStop.srv
forklift_nav2_demo/: CMakeLists.txt  package.xml
forklift_nav2_demo/config/: forklift_2d.lua  forklift_nav2.yaml  forklift_nav2_oru_test.yaml  forklift_nav2_oru_test_foxy.yaml
forklift_nav2_demo/docs/: forklift_system_architecture_and_oru_roadmap.md  foxy_migration_notes.md  foxy_pivot_turn_followup.md  nav2_algorithm_guide.md  oru_migration_execution_plan.md  p1_p2_vehicle_interface_next_steps.md  p3_vehicle_model_bridge_mode_notes.md  p4_2_path_to_trajectory_notes.md  p4_3_preview_window_notes.md  p4_4_minimal_mpc_solver_notes.md  p4_5_nav2_controller_api_notes.md  p4_mpc_state_control_notes.md  p5_trajectory_preprocessing_notes.md  p6_lattice_planner_scaffold_notes.md
forklift_nav2_demo/launch/: forklift_auto_slam.launch.py  forklift_gazebo.launch.py  forklift_navigation.launch.py  forklift_slam.launch.py
forklift_nav2_demo/scripts/: forklift_auto_slam_mapper.py  forklift_follow_path_acceptance.py  forklift_manual_path_follower.py  forklift_teleop.py  spawn_forklift_entity.py  wait_for_sim_ready.py
forklift_nav2_demo/urdf/: forklift_diff_drive.urdf.xacro
forklift_nav2_demo/worlds/: forklift_warehouse.world
forklift_nav2_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
forklift_nav2_plugins/include/forklift_nav2_plugins/: forklift_mpc_controller.hpp  forklift_mpc_preview_window.hpp  forklift_mpc_solver.hpp  forklift_mpc_trajectory.hpp  forklift_mpc_types.hpp  forklift_vehicle_model.hpp  oru_global_planner.hpp
forklift_nav2_plugins/src/: forklift_mpc_controller.cpp  forklift_mpc_preview_window.cpp  forklift_mpc_solver.cpp  forklift_mpc_trajectory.cpp  forklift_mpc_types.cpp  forklift_vehicle_model.cpp  oru_global_planner.cpp
forklift_nav2_plugins/test/: test_forklift_mpc_preview_window.cpp  test_forklift_mpc_solver.cpp  test_forklift_mpc_trajectory.cpp  test_forklift_mpc_types.cpp  test_forklift_vehicle_model.cpp  test_oru_global_planner.cpp
forklift_vehicle_interface/: package.xml  setup.cfg  setup.py
forklift_vehicle_interface/forklift_vehicle_interface/: curtis_can_codec.py  curtis_vehicle_interface.py  sim_command_bridge.py
forklift_vehicle_interface/launch/: sim_command_bridge.launch.py
forklift_vehicle_interface/test/: test_curtis_can_codec.py
scripts/: foxy_colcon_build.sh  foxy_colcon_test.sh  foxy_docker_build.sh  foxy_docker_run.sh
